trunk/Archive2/26/effc7b41bd9690/output
main.cpp:1:11: error: function cannot return array type 'double []'
double foo()[] {
          ^
main.cpp:2:12: error: excess elements in scalar initializer
    return {1, 2, 3};   
           ^ ~~~~~~~
2 errors generated.
